border causing elements to "jump" fix

--- a/components/src/patterns/header/_mixins.scss
+++ b/components/src/patterns/header/_mixins.scss
@@ -76,7 +76,6 @@
   &:hover,
   &.hover {
     background: var(--#{$prefix}-nav-item-background-hover);
-    border-left: 0;
   }
   &.active {
     border-bottom: 4px solid var(--sdds-nav-item-border-active);
