--- a/components/src/patterns/header/_navbar-menu-item.scss
+++ b/components/src/patterns/header/_navbar-menu-item.scss
@@ -113,11 +113,6 @@
 
       padding: 0;
       position: relative;
-      border-right: 0;
-
-      &:hover {
-        border-color: transparent;
-      }
 
       > .#{$prefix}-navbar-menu-item-link {
         .#{$prefix}-icon-arrow {
